--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -40,6 +40,9 @@
               Dashboard
             </li>
             <li>
+              <%= link_to 'Users', users_path %>
+            </li>
+            <li>
               <%= link_to 'Profile', '#' %>
             </li>
             <li>
