--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,13 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :multipart => true, :remote=>true) do |f| %>
 
         <div class="uk-form-row">
-          <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "uk-input" %>
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, autofocus: true, autocomplete: "first name", class: "uk-input" %>
+        </div>
+
+        <div class="uk-form-row">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name, autofocus: true, autocomplete: "last name", class: "uk-input" %>
         </div>
 
         <div class="uk-form-row">
