Create Login Screen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -313,6 +313,42 @@ span.head
   line-height: 80px
 
 // links
-.uk-actions
-  a
-    padding-right: 1em
+.uk-actions a
+  padding-right: 1em
+
+//login email
+.uk-input:focus
+  background: 0,0
+  border-bottom: 2px solid white
+
+
+.uk-input
+  background: 0 0
+  border: none
+  box-shadow: none
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5)
+  color: #FFF
+  border-radius: 0
+
+//login button
+.uk-button
+  border-radius: 50px
+  color: rgba(255, 255, 255, 0.8)
+  background: #222
+  border: 2px solid rgba(255, 255, 255, 0.8)
+  font-size: 18px
+  line-height: 40px
+  text-transform: none
+
+.uk-button:hover
+  color: white
+  border: 2px solid white
+  outline: none
+  background-color: none
+
+.uk-button-primary:active, .uk-button-primary.uk-active 
+    background-color: none
+    color: #fff
+
+.uk-button-primary:hover
+  background-color: #222
