--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -13,10 +13,7 @@
     <meta name="turbolinks-visit-control" content="reload">	
 	</head>
 	<body class="uk-height-1-1">
-		<div class="uk-flex uk-flex-center uk-flex-middle uk-background-muted uk-height-viewport">
-        <div class="uk-position-bottom-center uk-position-small uk-visible@m">
-				<span class="uk-text-small uk-text-muted">© 2017 Company Name - <a href="https://github.com/zzseba78/Kick-Off">Created by KickOff</a> | Built with <a href="http://getuikit.com" title="Visit UIkit 3 site" target="_blank" data-uk-tooltip><span data-uk-icon="uikit"></span></a></span>
-			</div>
+		<div class="uk-flex uk-flex-center uk-flex-middle uk-background-secondary uk-height-viewport">
 			<div class="uk-width-medium uk-padding-small">						
 			<%= yield :header %>
 			<%= yield :content %>
