--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -16,6 +16,7 @@
 		<div class="uk-flex uk-flex-center uk-flex-middle uk-background-secondary uk-height-viewport">
 			<div class="uk-width-medium uk-padding-small">						
 			<%= yield :header %>
+			<%= yield :side %>
 			<%= yield :content %>
 			</div>
 		</div>
