--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,41 +2,49 @@
   <%= render 'shared/menu' %>
 <% end %>
 
+<% content_for :side do %>
+  <%= render 'shared/side' %>
+<% end %>
+
 <% content_for :content do %>
-  <div class="content-well p-x-2 p-y-2">
-    <div class="uk-container">
-      <table class="uk-table uk-table-middle uk-table-divider uk-table-large uk-table-justify" data-uk-scrollspy="cls:uk-animation-fade;">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Roles</th>
-            <th>Status</th>
-            <th>Date Created</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @users.each do |user| %>
-            <tr>
-              <td class="uk-width-1-5"><%= user['fullName'] %></td>
-              <td class="uk-width-1-5"><%= user['email'] %></td>
-              <td class="uk-width-1-5">
-                <% user['roles'].each do |role| %>
-                  <%= role %>
-                <% end %>
-              </td>
-              <td class="uk-width-1-5">
-                <% if user['enabled'] %>
-                  Enabled
-                <% else %>
-                  Disabled
-                <% end %>
-              </td>
-              <td class="uk-width-1-5"><%= format_date(user['dateCreated']) %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+  <div class="main uk-section">
+    <div class="uk-container uk-container-expand uk-position-relative">
+      <div class="content-well p-x-2 p-y-2">
+        <div class="uk-container">
+          <table class="uk-table uk-table-middle uk-table-divider uk-table-large uk-table-justify" data-uk-scrollspy="cls:uk-animation-fade;">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Roles</th>
+                <th>Status</th>
+                <th>Date Created</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <td class="uk-width-1-5"><%= user['fullName'] %></td>
+                  <td class="uk-width-1-5"><%= user['email'] %></td>
+                  <td class="uk-width-1-5">
+                    <% user['roles'].each do |role| %>
+                      <%= role %>
+                    <% end %>
+                  </td>
+                  <td class="uk-width-1-5">
+                    <% if user['enabled'] %>
+                      Enabled
+                    <% else %>
+                      Disabled
+                    <% end %>
+                  </td>
+                  <td class="uk-width-1-5"><%= format_date(user['dateCreated']) %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
