--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -413,3 +413,15 @@ span.head
   @media (min-width:1400px)
     margin-left: 250px
 
+
+.bordered
+  margin-left: 30px
+  width: 90%
+  border-top: 1px solid #ccc
+  border-bottom: 1px solid #ccc
+  padding: 10px
+  background: #eee
+
+.bordered-right
+  border-right: 1px solid #ccc
+
