--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -24,7 +24,55 @@
 
 <% content_for :content do %>  
   <div class="main uk-section">
-    <div class="uk-container uk-container-expand uk-position-relative">
+    <div class="uk-container uk-container-expand uk-position-relative uk-padding-large">
+      <div class="uk-grid">
+        <div class="uk-width-1-2 ">
+          <span style=" color: #000 !important;">TOTAL EARNINGS - Sample only</span>
+          <h2 class="uk-margin-remove-top uk-text-bold">PHP 100.00</h2>
+        </div>
+        <div class="uk-width-1-2 ">
+          <div class="uk-align-right uk-margin-small-right">
+          <span style="color: #000 !important;">PAY PERIOD</span>
+          <br>
+          <select class="uk-form-select" data-uk-form-select>
+              <option value="">Current Statement</option>
+              <option value="">Previous Statement</option>
+          </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="uk-grid uk-margin-remove-left bordered">
+        <div class="uk-width-1-4 bordered-right">
+          <h3 class="uk-margin-remove-bottom bookingfont">0</h3>
+          <span>PAID BOOKINGS</span>
+        </div>
+        <div class="uk-width-1-4 bordered-right">
+          <h3 class="uk-margin-remove-bottom">0</h3>
+          <span>RESERVED BOOKINGS</span>
+        </div>
+        <div class="uk-width-1-4 bordered-right">
+          <h3 class="uk-margin-remove-bottom">0</h3>
+          <span>BOOKING CANCELATIONS</span>
+        <div class="uk-width-1-4">
+        </div>
+        </div>
+      </div>
+        <div class="uk-grid uk-margin-small">
+          <h3>Weekly Earnings</h3>
+        </div>
+        <div class="uk-grid">
+            <div class="uk-grid">
+              <h4>Earnings</h4>
+            </div>
+            <div class="uk-grid">
+              <h4>Earnings</h4>
+            </div>
+            <div class="uk-grid">
+              <h4>Earnings</h4>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
