Update login screen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -329,8 +329,10 @@ span.head
 
 //login email
 .uk-input:focus
+  color: white
   background: 0,0
   border-bottom: 2px solid white
+
 
 
 .uk-input
@@ -340,6 +342,9 @@ span.head
   border-bottom: 2px solid rgba(255, 255, 255, 0.5)
   color: #FFF
   border-radius: 0
+
+
+
 
 //login button
 .uk-button
