--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -14,7 +14,7 @@
 	</head>
 	<body class="uk-height-1-1">
 		<div class="uk-flex uk-flex-center uk-flex-middle uk-background-secondary uk-height-viewport">
-			<div class="uk-width-medium uk-padding-small">						
+			<div class="uk-padding-small">						
 			<%= yield :header %>
 			<%= yield :side %>
 			<%= yield :content %>
