--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -34,6 +34,9 @@ html
 .uk-link
   color: $link
 
+.logout-nav
+  color:  black
+
 .uk-alert-danger 
   position: fixed
   top: 0px
@@ -386,7 +389,7 @@ span.head
   top: 10px
 
 .main
-  background: $content
+  background: white
 
 .uk-section
   padding: 20px
@@ -413,15 +416,98 @@ span.head
   @media (min-width:1400px)
     margin-left: 250px
 
+.uk-form-select
+  padding: 10px 30px 10px 5px
+  margin-left: 355px
+  font-size: 16px
+  -webkit-appearance: none
+  background: url(arrowdown.png) no-repeat right, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FBFBFB))
+  background-size: contain
+  cursor: pointer
 
-.bordered
+
+//dashboard
+
+.row-bookings
   margin-left: 30px
-  width: 90%
-  border-top: 1px solid #ccc
-  border-bottom: 1px solid #ccc
-  padding: 10px
-  background: #eee
+  border-top: 1px solid #ece9ea
+  border-bottom: 1px solid #ece9ea
+  padding-top: 10px
+  padding-bottom: 10px
+  background-color: #f7f7f9
 
-.bordered-right
+.booking-item
+  padding-left: 10px
   border-right: 1px solid #ccc
+
+.total-earnings
+  padding-left: 20px
+  padding-right: 20px
+
+.current-statement
+  padding-left: 20px
+  padding-right: 20px
+
+.span-total-earnings
+  color: black
+  float: right
+
+.span-earnings
+  color: black
+  float: right
+  margin-left: 440px
+
+
+.earning-list
+  padding-top: 20px
+  padding-bottom: 20px
+  border: 1px solid #d3d3d3
+  
+
+.container-list
+  padding-left: 20px
+  padding-right: 20px
+  
+
+.container-list-item
+  padding-left: 0px
+  padding-top: 5px
+  padding-bottom: 25px
+  border-bottom: 1px solid #ccc
+
+.inner-list:hover
+  background-color: #f7f7f9
+  
+.uk-text-bold
+  color: black
+
+.weekly-earning
+  margin-left:  250px
+
+.weekly-earning-mid
+  margin-left:  275px
+
+.earnings
+  color: black
+
+.active-date
+  padding-top: 15px
+  padding-bottom: 15px
+  padding-left: 5px
+  padding-right: 5px
+  border: 1px solid #ccc
+
+.border-bottom
+  border-bottom: 4px solid #5bc0de
+
+.active-date:hover
+  background-color: #f7f7f9
+
+.date
+  color:  black
+  font-size: 10px
+  float: left
+
+.daily-earning
+  float: left
 
