--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -32,10 +32,19 @@ html
   background: $background
 
 .uk-link
-  color: $link
+  color: #999
+
+.uk-link:hover 
+  color: white
+  text-decoration: none
+
 
 .logout-nav
   color:  black
+
+a:hover
+  color:  black
+  text-decoration: none
 
 .uk-alert-danger 
   position: fixed
