--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -38,6 +38,11 @@ html
   color: white
   text-decoration: none
 
+.user-div
+  display: block
+
+.poweroff-icon
+  margin-bottom: 5px
 
 .logout-nav
   color:  black
