Create localities page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -364,7 +364,7 @@ span.head
 
 
 //login button
-.uk-button
+.login-button
   border-radius: 50px
   color: rgba(255, 255, 255, 0.8)
   background: #222
@@ -373,17 +373,17 @@ span.head
   line-height: 40px
   text-transform: none
 
-.uk-button:hover
+.login-button:hover
   color: white
   border: 2px solid white
   outline: none
   background-color: none
 
-.uk-button-primary:active, .uk-button-primary.uk-active 
+.login-button:active, .login-button.uk-active 
     background-color: none
     color: #fff
 
-.uk-button-primary:hover
+.login-button:hover
   background-color: #222
 
 // side nav
@@ -524,4 +524,19 @@ span.head
 
 .daily-earning
   float: left
+
+//localities
+.breadcrumb
+  background-color: #eceeef
+
+.localities-panel
+  border: 1px solid #d3d3d3
+
+.localities-panel-header
+  border-bottom: 1px solid #d3d3d3
+  background-color: #f7f7f9
+
+.localities-table
+  border-top: 1px solid #d3d3d3
+
 
