Add route for localities page

--- a/app/views/shared/_side.html.erb
+++ b/app/views/shared/_side.html.erb
@@ -27,7 +27,7 @@
 					<%= link_to 'Categories', '#' %>
 				</li>
 				<li>
-					<%= link_to 'Localities', '#' %>
+					<%= link_to 'Localities', localities_path %>
 				</li>
 				<li>
 					<%= link_to 'Audit Trail', '#' %>
