--- a/app/views/shared/_side.html.erb
+++ b/app/views/shared/_side.html.erb
@@ -6,7 +6,7 @@
 					<%= link_to 'Dashboards', authenticated_root_path %>
 				</li>
 				<li>
-					<%= link_to 'Evets', '#' %>
+					<%= link_to 'Events', events_path %>
 				</li>
 				<li>
 					<%= link_to 'Experiences', '#' %>
